начал делать header

--- a/src/index.html
+++ b/src/index.html
@@ -7,11 +7,15 @@
   <link rel="stylesheet" href="./css/vendor.css">
   <link rel="stylesheet" href="./css/main.css">
   <link rel="icon" href="f.ico" type="image/x-icon">
-  <title>NEW PROJECT</title>
+  <title>Medical - main page</title>
 </head>
 <body>
 
+@include('./html/header.html')
+<main class="main">
 
+</main>
+@include('./html/footer.html')
 
 </body>
 </html>
