header__top готов. Начал header__bottom

--- a/src/html/header.html
+++ b/src/html/header.html
@@ -1,21 +1,41 @@
 <header class="header">
-    <div class="header__top">
-      <div class="container header__top_content">
-        <div class="header_social">
-          <svg class="header_svg header_fb">
-            <use xlink:href="./img/sprite.svg#icon-fb"></use>
-          </svg>
-          <svg class="header_svg header_twit">
-            <use xlink:href="./img/sprite.svg#icon-twit"></use>
-          </svg>
-          <svg class="header_svg header_ln">
-            <use xlink:href="./img/sprite.svg#icon-ln"></use>
-          </svg>
-        </div>
-        <span class="header_email">sales@medpro.com</span>
+  <div class="header__top">
+    <div class="container header__top_content">
+      <div class="header_social">
+        <svg class="header_svg header_fb">
+          <use xlink:href="./img/sprite.svg#icon-fb"></use>
+        </svg>
+        <svg class="header_svg header_twit">
+          <use xlink:href="./img/sprite.svg#icon-twit"></use>
+        </svg>
+        <svg class="header_svg header_ln">
+          <use xlink:href="./img/sprite.svg#icon-ln"></use>
+        </svg>
       </div>
+      <span class="header_email">sales@medpro.com</span>
     </div>
-    <div class="header__bottom">
-
+  </div>
+  <div class="header__bottom container">
+    <a href="#" class="header_link">
+      <img src="./img/logo.svg" alt="логотип" class="header__logo">
+    </a>
+    <nav class="nav header-nav">
+      <ul class="header-nav__list">
+        <li class="header-nav__item header-nav__item_active"><a href="#" class="header-nav__link">Home</a></li>
+        <li class="header-nav__item"><a href="#" class="header-nav__link">About us</a></li>
+        <li class="header-nav__item"><a href="#" class="header-nav__link">Services</a></li>
+        <li class="header-nav__item"><a href="#" class="header-nav__link">Why us?</a></li>
+        <li class="header-nav__item"><a href="#" class="header-nav__link">Security</a></li>
+        <li class="header-nav__item"><a href="#" class="header-nav__link">Case studies</a></li>
+        <li class="header-nav__item"><a href="#" class="header-nav__link">FAQ’S</a></li>
+        <li class="header-nav__item"><a href="#" class="header-nav__link">Contact us</a></li>
+      </ul>
+    </nav>
+    <div class="header__phone header-phone">
+      <a href="tel:3201112111" class="header-phone__link">
+        <span class="header-phone__caption">call us</span>
+        <span class="header-phone__value">320- 111-2111 (MED-PRO)</span>
+      </a>
     </div>
+  </div>
 </header>
