--- a/src/html/header.html
+++ b/src/html/header.html
@@ -31,11 +31,13 @@
         <li class="header-nav__item"><a href="#" class="header-nav__link">Contact us</a></li>
       </ul>
     </nav>
-    <div class="header__phone header-phone">
-      <a href="tel:3201112111" class="header-phone__link">
-        <span class="header-phone__caption">call us</span>
-        <span class="header-phone__value">320- 111-2111 (MED-PRO)</span>
+    <div class="header-contacts">
+      <a href="tel:3201112111" class="header-contacts__link header-contacts__link_phone">
+        <span class="header-contacts__caption">call us</span>
+        <span class="header-contacts__value">320- 111-2111 (MED-PRO)</span>
       </a>
     </div>
   </div>
 </header>
+
+</div>
