--- a/src/html/header.html
+++ b/src/html/header.html
@@ -34,7 +34,7 @@
     <div class="header-contacts">
       <a href="tel:3201112111" class="header-contacts__link header-contacts__link_phone">
         <span class="header-contacts__caption">call us</span>
-        <span class="header-contacts__value">320- 111-2111 (MED-PRO)</span>
+        <span class="header-contacts__value">320-111-2111 (MED-PRO)</span>
       </a>
     </div>
   </div>
