--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
 
 @include('./html/header.html')
 <main class="main">
-
+  @include('./html/hero.html')
 </main>
 @include('./html/footer.html')
 
