начал делать секцию about

--- a/src/html/hero.html
+++ b/src/html/hero.html
@@ -1,12 +1,13 @@
-<div class="hero">
+<section class="hero">
   <div class="container">
     <div class="hero__content">
       <p class="hero__text">For physicians</p>
       <h2 class="hero__title">Our promise</h2>
       <p class="hero__descr">90% First Pass payment within 30 days @up to 3% of collected revenue.</p>
+      <!-- TODO сделать ссылку, а не кнопку -->
       <button class="btn hero__btn">reach us</button>
     </div>
   </div>
-</div>
+</section>
 
 <!-- TODO Добавить слайдер в блок hero -->
