--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,7 @@
 @include('./html/header.html')
 <main class="main">
   @include('./html/hero.html')
+  @include('./html/about.html')
 </main>
 @include('./html/footer.html')
 
