блок about__right почти готов (остались иконки в reason)

--- a/src/html/hero.html
+++ b/src/html/hero.html
@@ -4,7 +4,8 @@
       <p class="hero__text">For physicians</p>
       <h2 class="hero__title">Our promise</h2>
       <p class="hero__descr">90% First Pass payment within 30 days @up to 3% of collected revenue.</p>
-      <!-- TODO сделать ссылку, а не кнопку -->
+      <!-- предполагал переделать на ссылку, а не кнопку
+      Но решил оставить кнопку (все равно нет ясности что она делает...) -->
       <button class="btn hero__btn">reach us</button>
     </div>
   </div>
