--- a/src/html/about.html
+++ b/src/html/about.html
@@ -1,15 +1,31 @@
 <section class="about container">
   <div class="about__left">
-    <h2 class="title about__header">About us</h2>
-    <img src="../img/about.jpg" alt="интерьер клиники">
+    <h2 class="title about__title">About us</h2>
+    <img class="about__img" src="../img/about.jpg" alt="интерьер клиники">
     <p class="description">
       I no longer miss work to go to the doctor. I no longer wait hours sitting in a doctors office just to see the doctor. In the past, after seeing the doctor, I now no longer have to wait at a pharmacy to get my prescriptions filled. I now get medical treatment and prescriptions without leaving the house. I get all of this and its just a click away. Not only a click away, but its also legal.
+      <br>
       <br>
       <br>
       Today’s online pharmacies has made it very convenient for people who already know what their diagnosis is, and already know what medications work for them.
     </p>
   </div>
   <div class="about__right">
-    <h2 class="title about__header">Why us?</h2>
+    <h2 class="title about__title">why us?</h2>
+    <div class="about__reason reason">
+      <h3 class="title title_small title_color-main reason__title">dependable</h3>
+      <p class="description reason__description">Our skilled and trustworthy teams ensure process continuity and maintain high standards of quality…</p>
+      <a href="#" class="about__link">read more</a>
+    </div>
+    <div class="about__reason reason about__reason_dark">
+      <h3 class="title title_small title_color-main reason__title">open</h3>
+      <p class="description reason__description">You are assured of transparency and openness in our staffing, workflows and communication protocol. </p>
+      <a href="#" class="about__link">read more</a>
+    </div>
+    <div class="about__reason reason">
+      <h3 class="title title_small title_color-main reason__title">connected</h3>
+      <p class="description reason__description">There is never a time when some one will not be in touch with you!  Your dedicated account manager…</p>
+      <a href="#" class="about__link">read more</a>
+    </div>
   </div>
 </section>
