--- a/src/html/about.html
+++ b/src/html/about.html
@@ -2,11 +2,10 @@
   <div class="about__left">
     <h2 class="title about__title">About us</h2>
     <img class="about__img" src="../img/about.jpg" alt="интерьер клиники">
-    <p class="description">
+    <p class="about__description">
       I no longer miss work to go to the doctor. I no longer wait hours sitting in a doctors office just to see the doctor. In the past, after seeing the doctor, I now no longer have to wait at a pharmacy to get my prescriptions filled. I now get medical treatment and prescriptions without leaving the house. I get all of this and its just a click away. Not only a click away, but its also legal.
-      <br>
-      <br>
-      <br>
+    </p>
+    <p class="about__description">
       Today’s online pharmacies has made it very convenient for people who already know what their diagnosis is, and already know what medications work for them.
     </p>
   </div>
