начал делать блок benefits

--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,7 @@
 <main class="main">
   @include('./html/hero.html')
   @include('./html/about.html')
+  @include('./html/benefits.html')
 </main>
 @include('./html/footer.html')
 
