Готова разметка для блока benefits

--- a/src/html/benefits.html
+++ b/src/html/benefits.html
@@ -1,9 +1,24 @@
 <section class="benefits">
-  <div class="benefits__buttons-box"></div>
+  <div class="benefits__buttons-box">
+
+  </div>
+
   <div class="benefits__content">
     <div class="container">
-      <div class="benefit__content-wrapper">
-
+      <div class="benefits-container">
+        <div class="benefits__content-box">
+          <div class="title">benefits</div>
+          <div class="subtitle">for physicians and group practice</div>
+          <div class="description">
+            <ul class="benefits__list">
+              <li class="benefits__item">90% first pass payment within 30 days, at 3% Billing charges.</li>
+              <li class="benefits__item">Increase of 15-20% in monthly collected revenue.</li>
+              <li class="benefits__item">Expert teams with vast knowledge and experience who will follow up every claim to zero balance.</li>
+              <li class="benefits__item">Services spanning coding review, claims and payment processing, as well as Insurance and patient follow up.</li>
+            </ul>
+          </div>
+          <button>read more</button>
+        </div>
       </div>
     </div>
   </div>
