--- a/src/html/hero.html
+++ b/src/html/hero.html
@@ -6,7 +6,7 @@
       <p class="hero__descr">90% First Pass payment within 30 days @up to 3% of collected revenue.</p>
       <!-- предполагал переделать на ссылку, а не кнопку
       Но решил оставить кнопку (все равно нет ясности что она делает...) -->
-      <button class="btn hero__btn">reach us</button>
+      <button class="btn-reset btn btn-colored hero__btn">reach us</button>
     </div>
   </div>
 </section>
