блок benefits__content готов

--- a/src/html/benefits.html
+++ b/src/html/benefits.html
@@ -7,9 +7,9 @@
     <div class="container">
       <div class="benefits-container">
         <div class="benefits__content-box">
-          <div class="title">benefits</div>
-          <div class="subtitle">for physicians and group practice</div>
-          <div class="description">
+          <div class="title benefits__title">benefits</div>
+          <div class="subtitle benefits__subtitle">for physicians and group practice</div>
+          <div class="description benefits__description">
             <ul class="benefits__list">
               <li class="benefits__item">90% first pass payment within 30 days, at 3% Billing charges.</li>
               <li class="benefits__item">Increase of 15-20% in monthly collected revenue.</li>
@@ -17,7 +17,7 @@
               <li class="benefits__item">Services spanning coding review, claims and payment processing, as well as Insurance and patient follow up.</li>
             </ul>
           </div>
-          <button>read more</button>
+          <button class="btn-reset btn btn-colored">read more</button>
         </div>
       </div>
     </div>
