исправил в блоке hero описание title и subtitle

--- a/src/html/hero.html
+++ b/src/html/hero.html
@@ -2,8 +2,8 @@
   <div class="container">
     <div class="hero__content">
       <p class="hero__text">For physicians</p>
-      <h2 class="hero__title">Our promise</h2>
-      <p class="hero__descr">90% First Pass payment within 30 days @up to 3% of collected revenue.</p>
+      <h2 class="title hero__title">Our promise</h2>
+      <p class="description hero__descr">90% First Pass payment within 30 days @up to 3% of collected revenue.</p>
       <!-- предполагал переделать на ссылку, а не кнопку
       Но решил оставить кнопку (все равно нет ясности что она делает...) -->
       <button class="btn-reset btn btn-colored hero__btn">reach us</button>
