готова секция benefits

--- a/src/html/benefits.html
+++ b/src/html/benefits.html
@@ -1,7 +1,9 @@
 <section class="benefits">
-  <div class="benefits__buttons-box">
-
-  </div>
+  <nav class="benefits__buttons-box">
+    <button class="btn-reset benefits__nav-btn benefits__nav-btn_active title">for physicians and group practice:</button>
+    <button class="btn-reset benefits__nav-btn title">for medical billing companies/hospitals:</button>
+    <button class="btn-reset benefits__nav-btn title">you stay in control:</button>
+  </nav>
 
   <div class="benefits__content">
     <div class="container">
@@ -13,8 +15,10 @@
             <ul class="benefits__list">
               <li class="benefits__item">90% first pass payment within 30 days, at 3% Billing charges.</li>
               <li class="benefits__item">Increase of 15-20% in monthly collected revenue.</li>
-              <li class="benefits__item">Expert teams with vast knowledge and experience who will follow up every claim to zero balance.</li>
-              <li class="benefits__item">Services spanning coding review, claims and payment processing, as well as Insurance and patient follow up.</li>
+              <li class="benefits__item">Expert teams with vast knowledge and experience who will follow up every claim
+                to zero balance.</li>
+              <li class="benefits__item">Services spanning coding review, claims and payment processing, as well as
+                Insurance and patient follow up.</li>
             </ul>
           </div>
           <button class="btn-reset btn btn-colored">read more</button>
