начал секцию services-security

--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,7 @@
   @include('./html/hero.html')
   @include('./html/about.html')
   @include('./html/benefits.html')
+  @include('./html/services-security.html')
 </main>
 @include('./html/footer.html')
 
