изменил имя модификатора .title_small на .title_h3

--- a/src/html/about.html
+++ b/src/html/about.html
@@ -12,17 +12,17 @@
   <div class="about__right">
     <h2 class="title about__title">why us?</h2>
     <div class="about__reason about__reason_dependable reason">
-      <h3 class="title title_small title_color-main reason__title">dependable</h3>
+      <h3 class="title title_h3 title_color-main reason__title">dependable</h3>
       <p class="description reason__description">Our skilled and trustworthy teams ensure process continuity and maintain high standards of quality…</p>
       <a href="#" class="about__link">read more</a>
     </div>
     <div class="about__reason about__reason_open about__reason_dark reason">
-      <h3 class="title title_small title_color-main reason__title">open</h3>
+      <h3 class="title title_h3 title_color-main reason__title">open</h3>
       <p class="description reason__description">You are assured of transparency and openness in our staffing, workflows and communication protocol. </p>
       <a href="#" class="about__link">read more</a>
     </div>
     <div class="about__reason about__reason_connected reason">
-      <h3 class="title title_small title_color-main reason__title">connected</h3>
+      <h3 class="title title_h3 title_color-main reason__title">connected</h3>
       <p class="description reason__description">There is never a time when some one will not be in touch with you!  Your dedicated account manager…</p>
       <a href="#" class="about__link">read more</a>
     </div>
