--- a/src/html/services-security.html
+++ b/src/html/services-security.html
@@ -1,7 +1,41 @@
 <section class="services-security">
   <div class="container">
     <div class="services-security__wrapper">
-      <div class="services"></div>
+      <div class="services">
+        <h2 class="title services__title">Our services</h2>
+        <p class="subtitle services__subtitle text-transform-none">Our staff extension services include</p>
+        <details class="services__details" open>
+          <summary class="services__summary title title_h3">coding services</summary>
+          <div class="services__content">
+            <img class="services__img" src="../img/services-1.jpg" alt="стетоскоп" aria-hidden="true">
+            <div class="services__text">
+              <p class="description services__description">We offer high quality coding and auditing services to hospitals and physicians; services extended for Anesthesia, Radiology, E&M and Surgery coding.</p>
+              <button class="btn-reset btn services__btn">read more</button>
+            </div>
+          </div>
+        </details>
+        <details class="services__details">
+          <summary class="services__summary title title_h3">credentialing</summary>
+          <div class="services__content">
+            <img class="services__img" src="../img/services-1.jpg" alt="стетоскоп" aria-hidden="true">
+            <div class="services__text">
+              <p class="description services__description">We offer high quality coding and auditing services to hospitals and physicians; services extended for Anesthesia, Radiology, E&M and Surgery coding.</p>
+              <button class="btn-reset btn services__btn">read more</button>
+            </div>
+          </div>
+        </details>
+        <details class="services__details">
+          <summary class="services__summary title title_h3">HCC management services</summary>
+          <div class="services__content">
+            <img class="services__img" src="../img/services-1.jpg" alt="стетоскоп" aria-hidden="true">
+            <div class="services__text">
+              <p class="description services__description">We offer high quality coding and auditing services to hospitals and physicians; services extended for Anesthesia, Radiology, E&M and Surgery coding.</p>
+              <button class="btn-reset btn services__btn">read more</button>
+            </div>
+          </div>
+        </details>
+      </div>
+
       <div class="security">
         <h2 class="title security__title">Security</h2>
         <p class="subtitle security__subtitle">POLI compliance</p>
