--- a/src/html/services-security.html
+++ b/src/html/services-security.html
@@ -40,7 +40,7 @@
         <h2 class="title security__title">Security</h2>
         <p class="subtitle security__subtitle">POLI compliance</p>
         <img class="security__img" src="../img/security.jpg" alt="изображение закрытого замка" aria-hidden="true">
-        <p class="description">We work with you to develop customized risk-management solutions covering information security, business continuity and privacy regulations.</p>
+        <p class="description security__description">We work with you to develop customized risk-management solutions covering information security, business continuity and privacy regulations.</p>
         <button class="btn-reset btn btn-colored">read more</button>
       </div>
     </div>
