начал секцию testimonials

--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,7 @@
   @include('./html/about.html')
   @include('./html/benefits.html')
   @include('./html/services-security.html')
+  @include('./html/testimonials.html')
 </main>
 @include('./html/footer.html')
 
