начал блок .testimonials__content

--- a/src/html/testimonials.html
+++ b/src/html/testimonials.html
@@ -2,15 +2,18 @@
   <div class="container">
     <div class="wrapper-relative">
       <h2 class="title testimonials__title">testimonials</h2>
-      <p class="description testimonials__description">What people say?</p>
+      <p class="subtitle testimonials__subtitle">What people say?</p>
       <p class="testimonials__value value">90%</p>
-      <p class="value__description description testimonials__description">First pass payment</p>
+      <p class="description value__description">First pass payment</p>
       <div class="testimonials__button-box">
-        <button class="btn-reset testimonials__btn">prev</button>
-        <button class="btn-reset testimonials__btn">next</button>
+        <button class="btn-reset testimonials__btn subtitle">next</button>
+        <span class="subtitle testimonials__btn"> / </span>
+        <button class="btn-reset testimonials__btn subtitle">prev</button>
       </div>
-      <div class="testimonials__content">
-
+      <div class="testimonials__content testimonials-content">
+        <h2 class="title testimonials-content__title">Increased revenues</h2>
+        <p class="description">When most people think of laser eye surgery, they automatically think of LASIK. While it is true that LASIK is a type of laser eye surgery, there are a number of other laser procedures that can produce equally successful results </p>
+        <span class="title_h3 testimonials-content__signature">Sam Andrews</span>
       </div>
     </div>
   </div>
