Готова секция .testimonials

--- a/src/html/testimonials.html
+++ b/src/html/testimonials.html
@@ -11,9 +11,13 @@
         <button class="btn-reset testimonials__btn subtitle">prev</button>
       </div>
       <div class="testimonials__content testimonials-content">
-        <h2 class="title testimonials-content__title">Increased revenues</h2>
-        <p class="description">When most people think of laser eye surgery, they automatically think of LASIK. While it is true that LASIK is a type of laser eye surgery, there are a number of other laser procedures that can produce equally successful results </p>
-        <span class="title_h3 testimonials-content__signature">Sam Andrews</span>
+        <blockquote>
+          <h2 class="title testimonials-content__title">Increased revenues</h2>
+          <p class="description testimonials-content__description">When most people think of laser eye surgery, they automatically think of LASIK. While
+            it is true that LASIK is a type of laser eye surgery, there are a number of other laser procedures that can
+            produce equally successful results </p>
+          <footer class="title title_h3 testimonials-content__author">Sam Andrews</footer>
+        </blockquote>
       </div>
     </div>
   </div>
