вынес в _settings.scss настройку двух колоночной секции .two-columns и переделал с учетом этой настройки секцию .services-security

--- a/src/html/services-security.html
+++ b/src/html/services-security.html
@@ -1,7 +1,7 @@
 <section class="services-security">
   <div class="container">
-    <div class="services-security__wrapper">
-      <div class="services">
+    <div class="wrapper-flexbox two-columns">
+      <div class="services two-columns__responsive-column">
         <h2 class="title services__title">Our services</h2>
         <p class="subtitle services__subtitle text-transform-none">Our staff extension services include</p>
         <details class="services__details" open>
@@ -36,7 +36,7 @@
         </details>
       </div>
 
-      <div class="security">
+      <div class="security two-columns__fixed-column">
         <h2 class="title security__title">Security</h2>
         <p class="subtitle security__subtitle">POLI compliance</p>
         <img class="security__img" src="../img/security.jpg" alt="изображение закрытого замка" aria-hidden="true">
