начал секцию Appointment. Готова левая часть.

--- a/src/index.html
+++ b/src/index.html
@@ -18,6 +18,7 @@
   @include('./html/benefits.html')
   @include('./html/services-security.html')
   @include('./html/testimonials.html')
+  @include('./html/appointment.html')
 </main>
 @include('./html/footer.html')
 
