исправил тег div на section в секции appointment

--- a/src/html/appointment.html
+++ b/src/html/appointment.html
@@ -1,4 +1,4 @@
-<div class="appointment">
+<section class="appointment">
   <div class="container">
     <div class="wrapper-flexbox two-columns">
       <div class="appointment__content two-columns__responsive-column">
@@ -35,4 +35,4 @@
       </form>
     </div>
   </div>
-</div>
+</section>
