--- a/src/html/footer.html
+++ b/src/html/footer.html
@@ -2,16 +2,16 @@
   <div class="container">
     <div class="wrapper-relative">
       <ul class="footer__contacts footer-contacts">
-        <li class="footer-contacts__item footer__address">
-          <div class="title title_h3 footer-contacts__title">US Address</div>
-          <a href="#" class="description footer-contacts__value">41 Lehner Lane Suite 272/a>
+        <li class="footer__contact footer__contact_address">
+          <div class="title title_h3 footer__title">US Address</div>
+          <a href="#" class="description footer-contacts__value">41 Lehner Lane Suite 272</a>
         </li>
-        <li class="footer-contacts__item footer__call">
-          <div class="title title_h3 footer-contacts__title">Call Us</div>
+        <li class="footer__contact footer__contact_call">
+          <div class="title title_h3 footer__title">Call Us</div>
           <a href="tel:4445993441" class="description footer-contacts__value">444-599-3441</a>
         </li>
-        <li class="footer-contacts__item footer__write">
-          <div class="title title_h3 footer-contacts__title">Write to Us</div>
+        <li class="footer__contact footer__contact_write">
+          <div class="title title_h3 footer__title">Write to Us</div>
           <a href="mailto:sales@medpro.com" class="description footer-contacts__value">sales@medpro.com</a>
         </li>
       </ul>
