начал блок .footer__nav

--- a/src/html/footer.html
+++ b/src/html/footer.html
@@ -2,20 +2,31 @@
   <div class="container">
     <div class="wrapper-relative">
       <ul class="footer__contacts footer-contacts">
-        <li class="footer__contact footer__contact_address">
-          <div class="title title_h3 footer__title">US Address</div>
+        <li class="footer__contact footer__contact_address footer__column">
+          <h3 class="title title_h3 footer__title footer__title_contacts">US Address</h3>
           <a href="#" class="description footer-contacts__value">41 Lehner Lane Suite 272</a>
         </li>
-        <li class="footer__contact footer__contact_call">
-          <div class="title title_h3 footer__title">Call Us</div>
+        <li class="footer__contact footer__contact_call footer__column">
+          <h3 class="title title_h3 footer__title footer__title_contacts">Call Us</h3>
           <a href="tel:4445993441" class="description footer-contacts__value">444-599-3441</a>
         </li>
-        <li class="footer__contact footer__contact_write">
-          <div class="title title_h3 footer__title">Write to Us</div>
+        <li class="footer__contact footer__contact_write footer__column">
+          <h3 class="title title_h3 footer__title footer__title_contacts">Write to Us</h3>
           <a href="mailto:sales@medpro.com" class="description footer-contacts__value">sales@medpro.com</a>
         </li>
       </ul>
-      <div class="footer__nav">nav</div>
+      <div class="footer__nav">
+        <div class="footer__about footer__column">
+          <h3 class="title title_h3 footer__title footer__title_nav">About MedPro</h3>
+          <p class="description">According to us blisters are a very common thing and we come across them very often in our daily lives. It is a very common occurrence like cold or fever depending upon your lifestyle. </p>
+        </div>
+        <div class="footer__links footer__column">
+          <h3 class="title title_h3 footer__title footer__title_nav">Quick Links</h3>
+        </div>
+        <div class="footer__social footer__column">
+          <h3 class="title title_h3 footer__title footer__title_nav">Stay Connected</h3>
+        </div>
+      </div>
       <div class="footer__copyright">copyright</div>
     </div>
   </div>
