--- a/src/html/footer.html
+++ b/src/html/footer.html
@@ -22,12 +22,40 @@
         </div>
         <div class="footer__links footer__column">
           <h3 class="title title_h3 footer__title footer__title_nav">Quick Links</h3>
+          <ul class="footer__list">
+            <li class="footer__link description"><a href="#">What Do We Offer?</a></li>
+            <li class="footer__link description"><a href="#">Coding Services</a></li>
+            <li class="footer__link description"><a href="#">FAQ’s</a></li>
+            <li class="footer__link description"><a href="#">Security</a></li>
+            <li class="footer__link description"><a href="#">Contact Us</a></li>
+          </ul>
         </div>
         <div class="footer__social footer__column">
           <h3 class="title title_h3 footer__title footer__title_nav">Stay Connected</h3>
+          <div class="footer__icon-box">
+            <a href="#" class="footer__social-link">
+              <svg class="footer__icon">
+                <use xlink:href="./img/sprite.svg#fb"></use>
+              </svg>
+            </a>
+            <a href="#" class="footer__social-link">
+              <svg class="footer__icon">
+                <use xlink:href="./img/sprite.svg#twit"></use>
+              </svg>
+            </a>
+            <a href="#" class="footer__social-link">
+              <svg class="footer__icon">
+                <use xlink:href="./img/sprite.svg#linkedin"></use>
+              </svg>
+            </a>
+          </div>
         </div>
       </div>
-      <div class="footer__copyright">copyright</div>
+    </div>
+  </div>
+  <div class="footer__copyright">
+    <div class="container">
+      <p class="description">Medpro © 2019. All Rights Reserved</p>
     </div>
   </div>
 </footer>
