--- a/src/html/header.html
+++ b/src/html/header.html
@@ -3,13 +3,13 @@
     <div class="container header__top_content">
       <div class="header_social">
         <svg class="header_svg header_fb">
-          <use xlink:href="./img/sprite.svg#icon-fb"></use>
+          <use xlink:href="./img/sprite.svg#fb"></use>
         </svg>
         <svg class="header_svg header_twit">
-          <use xlink:href="./img/sprite.svg#icon-twit"></use>
+          <use xlink:href="./img/sprite.svg#twit"></use>
         </svg>
         <svg class="header_svg header_ln">
-          <use xlink:href="./img/sprite.svg#icon-ln"></use>
+          <use xlink:href="./img/sprite.svg#linkedin"></use>
         </svg>
       </div>
       <span class="header_email">sales@medpro.com</span>
