Правки в хедере: ссылки на соц сети; z-index для .header__nav

--- a/src/html/header.html
+++ b/src/html/header.html
@@ -1,16 +1,22 @@
 <header class="header">
   <div class="header__top">
     <div class="container header__top_content">
-      <div class="header_social">
-        <svg class="header_svg header_fb">
-          <use xlink:href="./img/sprite.svg#fb"></use>
-        </svg>
-        <svg class="header_svg header_twit">
-          <use xlink:href="./img/sprite.svg#twit"></use>
-        </svg>
-        <svg class="header_svg header_ln">
-          <use xlink:href="./img/sprite.svg#linkedin"></use>
-        </svg>
+      <div class="header__social">
+        <a href="#" class="header__social-link">
+          <svg class="header_svg">
+            <use xlink:href="./img/sprite.svg#fb"></use>
+          </svg>
+        </a>
+        <a href="#" class="header__social-link">
+          <svg class="header_svg">
+            <use xlink:href="./img/sprite.svg#twit"></use>
+          </svg>
+        </a>
+        <a href="#" class="header__social-link">
+          <svg class="header_svg">
+            <use xlink:href="./img/sprite.svg#linkedin"></use>
+          </svg>
+        </a>
       </div>
       <span class="header_email">sales@medpro.com</span>
     </div>
