Добавил :hover и :focus везде.

--- a/src/html/header.html
+++ b/src/html/header.html
@@ -1,47 +1,51 @@
 <header class="header">
   <div class="header__top">
-    <div class="container header__top_content">
-      <div class="header__social">
-        <a href="#" class="header__social-link">
-          <svg class="header_svg">
-            <use xlink:href="./img/sprite.svg#fb"></use>
-          </svg>
-        </a>
-        <a href="#" class="header__social-link">
-          <svg class="header_svg">
-            <use xlink:href="./img/sprite.svg#twit"></use>
-          </svg>
-        </a>
-        <a href="#" class="header__social-link">
-          <svg class="header_svg">
-            <use xlink:href="./img/sprite.svg#linkedin"></use>
-          </svg>
-        </a>
+    <div class="container">
+      <div class="wrapper-flexbox header__top-content">
+        <div class="header__social">
+          <a href="#" class="header__social-link">
+            <svg class="header__svg">
+              <use xlink:href="./img/sprite.svg#fb"></use>
+            </svg>
+          </a>
+          <a href="#" class="header__social-link">
+            <svg class="header__svg">
+              <use xlink:href="./img/sprite.svg#twit"></use>
+            </svg>
+          </a>
+          <a href="#" class="header__social-link">
+            <svg class="header__svg">
+              <use xlink:href="./img/sprite.svg#linkedin"></use>
+            </svg>
+          </a>
+        </div>
+        <a href="mailto:sales@medpro.com" class="header__email">sales@medpro.com</a>
       </div>
-      <span class="header_email">sales@medpro.com</span>
     </div>
   </div>
-  <div class="header__bottom container">
-    <a href="#" class="header_link">
-      <img src="./img/logo.svg" alt="логотип" class="header__logo">
-    </a>
-    <nav class="nav header-nav">
-      <ul class="header-nav__list">
-        <li class="header-nav__item header-nav__item_active"><a href="#" class="header-nav__link">Home</a></li>
-        <li class="header-nav__item"><a href="#" class="header-nav__link">About us</a></li>
-        <li class="header-nav__item"><a href="#" class="header-nav__link">Services</a></li>
-        <li class="header-nav__item"><a href="#" class="header-nav__link">Why us?</a></li>
-        <li class="header-nav__item"><a href="#" class="header-nav__link">Security</a></li>
-        <li class="header-nav__item"><a href="#" class="header-nav__link">Case studies</a></li>
-        <li class="header-nav__item"><a href="#" class="header-nav__link">FAQ’S</a></li>
-        <li class="header-nav__item"><a href="#" class="header-nav__link">Contact us</a></li>
-      </ul>
-    </nav>
-    <div class="header-contacts">
-      <a href="tel:3201112111" class="header-contacts__link header-contacts__link_phone">
-        <span class="header-contacts__caption">call us</span>
-        <span class="header-contacts__value">320-111-2111 (MED-PRO)</span>
+  <div class="container">
+    <div class="header__bottom">
+      <a href="#" class="header__link">
+        <img src="./img/logo.svg" alt="логотип" class="header__logo">
       </a>
+      <nav class="nav header-nav">
+        <ul class="header-nav__list">
+          <li class="header-nav__item"><a href="#" class="header-nav__link header-nav__link_active">Home</a></li>
+          <li class="header-nav__item"><a href="#" class="header-nav__link">About us</a></li>
+          <li class="header-nav__item"><a href="#" class="header-nav__link">Services</a></li>
+          <li class="header-nav__item"><a href="#" class="header-nav__link">Why us?</a></li>
+          <li class="header-nav__item"><a href="#" class="header-nav__link">Security</a></li>
+          <li class="header-nav__item"><a href="#" class="header-nav__link">Case studies</a></li>
+          <li class="header-nav__item"><a href="#" class="header-nav__link">FAQ'S</a></li>
+          <li class="header-nav__item"><a href="#" class="header-nav__link">Contact us</a></li>
+        </ul>
+      </nav>
+      <div class="header-contacts">
+        <a href="tel:3201112111" class="header-contacts__link header-contacts__link_phone">
+          <span class="header-contacts__caption">call us</span>
+          <span class="header-contacts__value">320-111-2111 (MED-PRO)</span>
+        </a>
+      </div>
     </div>
   </div>
 </header>
