Исправления по результатам build-версии сборки и проверки валидаторами HTML и CSS

--- a/src/html/benefits.html
+++ b/src/html/benefits.html
@@ -9,7 +9,7 @@
     <div class="container">
       <div class="benefits-container">
         <div class="benefits__content-box">
-          <div class="title benefits__title">benefits</div>
+          <h2 class="title benefits__title">benefits</h2>
           <div class="subtitle benefits__subtitle">for physicians and group practice</div>
           <div class="description benefits__description">
             <ul class="benefits__list">
