--- a/src/html/services-security.html
+++ b/src/html/services-security.html
@@ -7,7 +7,7 @@
         <details class="services__details" open>
           <summary class="services__summary title title_h3">coding services</summary>
           <div class="services__content">
-            <img class="services__img" src="../img/services-1.jpg" alt="стетоскоп" aria-hidden="true">
+            <img class="services__img" src="./img/services-1.jpg" alt="стетоскоп" aria-hidden="true">
             <div class="services__text">
               <p class="description services__description">We offer high quality coding and auditing services to hospitals and physicians; services extended for Anesthesia, Radiology, E&M and Surgery coding.</p>
               <button class="btn-reset btn services__btn">read more</button>
@@ -17,7 +17,7 @@
         <details class="services__details">
           <summary class="services__summary title title_h3">credentialing</summary>
           <div class="services__content">
-            <img class="services__img" src="../img/services-1.jpg" alt="стетоскоп" aria-hidden="true">
+            <img class="services__img" src="./img/services-1.jpg" alt="стетоскоп" aria-hidden="true">
             <div class="services__text">
               <p class="description services__description">We offer high quality coding and auditing services to hospitals and physicians; services extended for Anesthesia, Radiology, E&M and Surgery coding.</p>
               <button class="btn-reset btn services__btn">read more</button>
@@ -27,7 +27,7 @@
         <details class="services__details">
           <summary class="services__summary title title_h3">HCC management services</summary>
           <div class="services__content">
-            <img class="services__img" src="../img/services-1.jpg" alt="стетоскоп" aria-hidden="true">
+            <img class="services__img" src="./img/services-1.jpg" alt="стетоскоп" aria-hidden="true">
             <div class="services__text">
               <p class="description services__description">We offer high quality coding and auditing services to hospitals and physicians; services extended for Anesthesia, Radiology, E&M and Surgery coding.</p>
               <button class="btn-reset btn services__btn">read more</button>
@@ -39,7 +39,7 @@
       <div class="security two-columns__fixed-column">
         <h2 class="title security__title">Security</h2>
         <p class="subtitle security__subtitle">POLI compliance</p>
-        <img class="security__img" src="../img/security.jpg" alt="изображение закрытого замка" aria-hidden="true">
+        <img class="security__img" src="./img/security.jpg" alt="изображение закрытого замка" aria-hidden="true">
         <p class="description security__description">We work with you to develop customized risk-management solutions covering information security, business continuity and privacy regulations.</p>
         <button class="btn-reset btn btn-colored">read more</button>
       </div>
