--- a/src/html/about.html
+++ b/src/html/about.html
@@ -1,7 +1,7 @@
 <section class="about container">
   <div class="about__left">
     <h2 class="title about__title">About us</h2>
-    <img class="about__img" src="../img/about.jpg" alt="интерьер клиники">
+    <img class="about__img" src="./img/about.jpg" alt="интерьер клиники">
     <p class="about__description">
       I no longer miss work to go to the doctor. I no longer wait hours sitting in a doctors office just to see the doctor. In the past, after seeing the doctor, I now no longer have to wait at a pharmacy to get my prescriptions filled. I now get medical treatment and prescriptions without leaving the house. I get all of this and its just a click away. Not only a click away, but its also legal.
     </p>
