--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./css/vendor.css">
   <link rel="stylesheet" href="./css/main.css">
+  <link rel="stylesheet" href="./css/vendor.min.css">
+  <link rel="stylesheet" href="./css/main.min.css">
   <link rel="icon" href="f.ico" type="image/x-icon">
   <title>Medical - main page</title>
 </head>
