Правки. В хедере и футере в ссылках на соц сети добавил target blank и aria-label

--- a/src/html/footer.html
+++ b/src/html/footer.html
@@ -33,17 +33,17 @@
         <div class="footer__social footer__column">
           <h3 class="title title_h3 footer__title footer__title_nav">Stay Connected</h3>
           <div class="footer__icon-box">
-            <a href="#" class="footer__social-link">
+            <a href="#" target="_blank" rel="noopener noreferrer" class="footer__social-link" aria-label="мы в фейсбук">
               <svg class="footer__icon">
                 <use xlink:href="./img/sprite.svg#fb"></use>
               </svg>
             </a>
-            <a href="#" class="footer__social-link">
+            <a href="#" target="_blank" rel="noopener noreferrer" class="footer__social-link" aria-label="мы в твиттере">
               <svg class="footer__icon">
                 <use xlink:href="./img/sprite.svg#twit"></use>
               </svg>
             </a>
-            <a href="#" class="footer__social-link">
+            <a href="#" target="_blank" rel="noopener noreferrer" class="footer__social-link" aria-label="мы в линкед ин">
               <svg class="footer__icon">
                 <use xlink:href="./img/sprite.svg#linkedin"></use>
               </svg>
