--- a/src/html/header.html
+++ b/src/html/header.html
@@ -3,17 +3,17 @@
     <div class="container">
       <div class="wrapper-flexbox header__top-content">
         <div class="header__social">
-          <a href="#" class="header__social-link">
+          <a href="#" target="_blank" rel="noopener noreferrer" class="header__social-link" aria-label="мы в фейсбук">
             <svg class="header__svg">
               <use xlink:href="./img/sprite.svg#fb"></use>
             </svg>
           </a>
-          <a href="#" class="header__social-link">
+          <a href="#" target="_blank" rel="noopener noreferrer" class="header__social-link" aria-label="мы в твиттере">
             <svg class="header__svg">
               <use xlink:href="./img/sprite.svg#twit"></use>
             </svg>
           </a>
-          <a href="#" class="header__social-link">
+          <a href="#" target="_blank" rel="noopener noreferrer" class="header__social-link" aria-label="мы в линкед ин">
             <svg class="header__svg">
               <use xlink:href="./img/sprite.svg#linkedin"></use>
             </svg>
